# n-fold-edge

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  publish_pypi.yml
docs/source/: CLI.rst  conf.py  contributing.rst  index.rst  installation.rst  notes.rst  reference.rst  tutorials_guides.rst
docs/source/_static/notes/pythonpic/: markertrackerillustrations.py
docs/source/cli/: checkerboard.rst  marker_locator.rst  marker_tracker.rst
docs/source/notes/: marker_implementation.rst  marker_types.rst  notes_on_markers.rst
docs/source/tutorials/: checkerboard_tutorial.rst  locate_marker_tutorial.rst  track_marker_tutorial.rst
patterns/: patterns.tex  robolabmarkers.tex
src/n_fold_edge/: MarkerCaptureROS.py  MarkerLocator.py  MarkerLocatorROS.py  MarkerPose.py  MarkerTracker.py  PerspectiveTransform.py  TrackerInWindowMode.py  VideoObjectTracker.py  __init__.py  __main__.py  checkerboard.py  marker_locator.py  marker_pose.py  marker_tracker.py
