[project]
name = "n-fold-edge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Henrik Dyrberg Egemose", email = "hde@mmmi.sdu.dk" }
]
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.13.0.92",
]

[project.scripts]
n-fold-edge = "n_fold_edge:main"

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"
